# uni-work

./: .gitignore  FINAL_DEMO_COMMANDS.md  README.md  auto_create_repo.py  copy_to_mac.py  create_github_repo.md  mac_setup_commands.md  push_to_github.sh  setup_asoa.sh
asoa_advanced_mitm/: FINAL_COMMANDS.md  MAC_ATTACK_DEPLOYMENT.md  README.md  asoa_message_modifier.py  asoa_protocol_analyzer.py  macos_mitm_plug_and_play.sh  main.py  network_discovery.py  platform_detector.py  requirements.txt  setup_mac.sh  simple_mitm_attack.py  test_asoa_mitm.py  test_mitm_attack.py  ucdr_handler.py
asoa_advanced_mitm/mitm_engines/: __init__.py  macos_asoa_mitm.py
asoa_advanced_mitm/utils/: __init__.py  logger.py  network_utils.py
asoa_demo_my_machine_setup/: .gitignore  DEPLOYMENT_GUIDE.md  Demo.pptx  README.md  demo.sh  install_and_run.sh  rollout.sh  simple_local_mitm.py  standalone_dashboard  standalone_dashboard.cpp  standalone_sensor  standalone_sensor.cpp  test_temp  test_temp.cpp
asoa_demo_my_machine_setup/ECUs/: build.sh  build_config.sh
asoa_demo_my_machine_setup/ECUs/Cerebrum/: CMakeLists.txt
asoa_demo_my_machine_setup/ECUs/Cerebrum/config/: CMakeLists.txt  asoa_security.conf  precompiled.c
asoa_demo_my_machine_setup/ECUs/Cerebrum/src/: CMakeLists.txt  runtime.cpp  speed_computation.cpp
asoa_demo_my_machine_setup/ECUs/Dashboard/: CMakeLists.txt
asoa_demo_my_machine_setup/ECUs/Dashboard/config/: asoa_security.conf
asoa_demo_my_machine_setup/ECUs/Dashboard/src/: CMakeLists.txt  display_state.cpp  runtime.cpp  temperature.cpp  temperature_display.cpp
asoa_demo_my_machine_setup/ECUs/DynamicModule/: CMakeLists.txt
asoa_demo_my_machine_setup/ECUs/DynamicModule/config/: asoa_security.conf
asoa_demo_my_machine_setup/ECUs/DynamicModule/src/: rpm_computation.cpp  runtime.cpp
asoa_demo_my_machine_setup/ECUs/Orchestrator/: StartDemo  StartDemo_Simple  StopDemo  asoa_security.conf
asoa_demo_my_machine_setup/ECUs/Radar/: CMakeLists.txt
asoa_demo_my_machine_setup/ECUs/SensorModule/: CMakeLists.txt
asoa_demo_my_machine_setup/ECUs/SensorModule/config/: CMakeLists.txt  asoa_security.conf  precompiled.c
asoa_demo_my_machine_setup/ECUs/SensorModule/include/services/: sensor_fusion.hpp  temperature_sensor.hpp
asoa_demo_my_machine_setup/ECUs/SensorModule/src/: CMakeLists.txt  runtime.cpp  sensor_fusion.cpp  simple_test.cpp  temperature_sensor.cpp  test_temp  test_temperature.cpp
asoa_demo_my_machine_setup/LogServer/: server_config.xml
asoa_demo_my_machine_setup/Rollout/: config.sh  ecus.sh
asoa_demo_my_machine_setup/Rollout/IPRequest/: ecu_ip_request.sh  reply.py  request.py
asoa_demo_my_machine_setup/SecurityPlatform/: legit_data_flows.xml  permission_tree.xml  server_config.xml
asoa_demo_my_machine_setup/SecurityPlatform/ecus/: cerebrum.xml  dashboard.xml  dynamic_module.xml  log_collector.xml  orchestrator.xml  radar.xml  sensor_module.xml  service_configurator.xml
asoa_demo_my_machine_setup/ServiceConfigurator/: server_config.xml
asoa_demo_my_machine_setup/ServiceConfigurator/ecus/: cerebrum.xml  dashboard.xml  dynamic_module.xml  orchestrator.xml  radar.xml  sensor_module.xml
asoa_mitm_attack/: README.md  arp_spoof.py  main.py  mitm_linux.py  mitm_macos.py  network_discovery.py  packet_handler.py  platform_detector.py  requirements.txt
asoa_mitm_attack/attacks/: __init__.py  base_attack.py  bias_attack.py  constant_temp.py
asoa_mitm_attack/utils/: __init__.py  logger.py  network_utils.py
(+15 files in other folders)
